<resources>
    <string name="app_name">driver-ccs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="success">Success</string>
    <string name="error">Erro</string>
    <string name="login">Login</string>
    <string name="register">Cadastro</string>
    <string name="historic">Histórico</string>
    <string name="user_profile">Perfil</string>
    <string name="new_vehicle">Novo veículo</string>
    <string name="logout">Logout</string>
    <string name="edit_password">Alterar senha</string>
    <string name="parking_lot">Estacionamento</string>

    <string name="label_user_name">Dave Mustaine</string>
    <string name="label_full_name">Nome Completo</string>
    <string name="label_cpf">CPF</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Telefone</string>
    <string name="label_save">Salvar</string>
    <string name="label_add_car">Adicionar veículo</string>
    <string name="label_change_password">Alterar senha</string>
    <string name="label_address">Rua consolação, 123 - Bairro, Cidade, SP</string>
    <string name="label_password">Senha</string>
    <string name="label_marca">Marca</string>
    <string name="label_model">Modelo</string>
    <string name="label_plate">Placa</string>
    <string name="label_your_cars">Seus veículos</string>
    <string name="label_add">Adicionar</string>
    <string name="label_cadastrar">Cadastrar</string>
    <string name="label_already_have_account">Já tem conta? Entre aqui</string>
    <string name="label_try_again">Tentar novamente</string>
    <string name="label_success_register">Cadastro realizado com sucesso!</string>
    <string name="label_success_password_edited">Senha alterada com sucesso!</string>
    <string name="label_success_password_edit_feedback">Login feito com sucesso, para prosseguir atualize sua senha!</string>
    <string name="label_success_reservation">Reserva feita com sucesso!</string>
    <string name="label_success">Sucesso!</string>
    <string name="label_keep_going">Avançar</string>
    <string name="label_error_message">Erro ao tentar cadastrar</string>
    <string name="label_check_out">Fazer check out</string>
    <string name="label_total_value">R$ 20,00</string>
    <string name="label_total">Total</string>
    <string name="label_park_name">Car parking lot</string>
    <string name="label_spot">A08</string>
    <string name="label_date">28/10/2023</string>
    <string name="label_spot_in_use">Vaga utilizada</string>
    <string name="label_hour">07h55</string>
    <string name="label_enter_time_day">Data</string>
    <string name="label_enter_time_hour">Hora</string>
    <string name="label_value_per_hour">Valor 1h</string>
    <string name="label_spots_available">Vagas disponíveis</string>
    <string name="label_amount_of_spots">%s/%s</string>
    <string name="label_book_now">Agendar agora</string>
    <string name="label_see_more">Ver mais</string>
    <string name="label_go_to">Ir até lá</string>
    <string name="label_km_distance">2km</string>
    <string name="label_distance">Distância</string>
    <string name="label_search">Buscar</string>
    <string name="label_entrance">Entrada</string>
    <string name="label_exit">Saida</string>
    <string name="label_confirm_password">Confirmar senha</string>
    <string name="label_login">Entrar</string>
    <string name="label_forget_password">Esqueci a senha</string>
    <string name="label_error_while_register">Erro ao cadastrar usuário!</string>
    <string name="label_error_while_login">Erro ao fazer login!</string>
    <string name="label_error_while_reservation">Erro ao fazer a reserva!</string>
    <string name="label_error">Erro!</string>
    <string name="label_values">Valores:</string>
    <string name="label_values_details">Até 1h: R$ %s\nDemais horas: R$ %s\nDiaria: R$ %s</string>
    <string name="label_current_password">Senha atual</string>
    <string name="label_newest_password">Nova senha</string>
    <string name="label_reservation">Reserva realizada!</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_check_in_done">Check in realizado!</string>
    <string name="label_check_out_done">Check out realizado!</string>
    <string name="label_check_out_order_done">Pedido de checkout realizado!</string>
    <string name="label_edit_password">Alterar senha</string>
    <string name="label_refresh_map">Altualizar mapa</string>
    <string name="warning_text">*</string>
    <string name="label_make_a_register">Não tem conta? Registre se aqui!</string>
    <string name="label_choose_date">Selecione uma data</string>
    <string name="label_choose_hour">00h00</string>
    <string name="label_make_reservation">Reservar</string>
</resources>